# anas-ips-modules

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: api_tokens.json  ha.json  intel_indicators.json  policy_profiles.json  update_public_keys.json  users.json
deploy/: docker-compose.control-plane.yml
deploy/systemd/: ips-module.service
deploy/windows/: install-service.ps1
docs/: ENTERPRISE_GAPS.md  ENTERPRISE_REDESIGN.md  HA_DEPLOYMENT.md  OPEN_SOURCE_RELEASE.md  SIGNED_UPDATES.md  SURICATA_CONTROL_PLANE.md
ips/: __init__.py  engine.py
ips/api/: bridge.py
ips/core/: alert_sink.py  audit.py  autoencoder.py  baseline.py  decision_chain.py  feature_builder.py  flow_tracker.py  ha.py  health.py  ml_engine.py  performance.py  policy.py  profile_store.py  quarantine.py  rule_engine.py  sniffer.py  state.py  threat_handler.py  threat_intel.py
ips/gui/: dashboard.py
ips/integrations/: __init__.py  suricata.py
ips/platform/: linux.py  windows.py
ips/security/: __init__.py  auth.py
ips/update/: __init__.py  manifest.py  verifier.py
ips/utils/: config.py  logger.py
models/: ae_scaler.pkl  autoencoder.pt  baseline_summary.json  isolation_forest.pkl
scripts/: benchmark_engine.py  build_release_manifest.py  run_self_test.py  train_autoencoder.py  train_models.py  verify_release.py
tests/: test_auth.py  test_engine.py  test_features.py  test_ha.py  test_intel.py  test_policy.py  test_profiles.py  test_session_auth.py  test_suricata_integration.py
